--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lifi/sdk": "^3.7.10",
+    "@lifi/wallet-management": "^3.12.0",
     "@metamask/sdk": "^0.33.0",
     "@openzeppelin/contracts": "^5.1.0",
     "@tanstack/react-query": "^5.81.5",
